--- a/rendu.ipynb
+++ b/rendu.ipynb
@@ -1,1 +1,68 @@
-
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyOkkfwfsO2fK8qXd6edtvTG",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/grifire/tp-rag-student-version/blob/main/rendu.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Vérifie si le code est exécuté sur Google Colab\n",
+        "if 'COLAB_GPU' in os.environ:\n",
+        "    # Commandes à exécuter uniquement sur Google Colab\n",
+        "    !git clone https://github.com/GITHUB_ACCOUNT/tp-rag-student-version.git\n",
+        "    %cd tp-rag\n",
+        "    !pip install -r requirements.txt\n",
+        "else:\n",
+        "    # Commandes à exécuter si ce n'est pas sur Google Colab\n",
+        "    print(\"Pas sur Google Colab, ces commandes ne seront pas exécutées.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jsGxBHNkPNwu",
+        "outputId": "d7c2ad0c-1099-4481-cd08-0b4f51ae86c0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'tp-rag-student-version'...\n",
+            "fatal: could not read Username for 'https://github.com': No such device or address\n",
+            "[Errno 2] No such file or directory: 'tp-rag'\n",
+            "/content\n",
+            "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
+    }
+  ]
+}
